[gd_scene load_steps=11 format=2]

[ext_resource path="res://MainScene/textures/player_sheet.png" type="Texture" id=1]
[ext_resource path="res://MainScene/player/Player.gd" type="Script" id=2]
[ext_resource path="res://MainScene/textures/shield.png" type="Texture" id=3]
[ext_resource path="res://audio/laserSFX.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/enemyDestroyedSFX.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 55.3535

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 99, 0, 99, 77 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 99, 77 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 0, 99, 77 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Straight",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
} ]

[node name="Player" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.33484, 0 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.66855, -3.6708 )
scale = Vector2( 0.864607, 0.862681 )
frames = SubResource( 5 )
animation = "Straight"

[node name="FiringPositions" type="Node2D" parent="."]

[node name="LeftGun" type="Node2D" parent="FiringPositions"]
position = Vector2( -64.0722, -57.398 )

[node name="RightGun" type="Node2D" parent="FiringPositions"]
position = Vector2( 12.681, -57.398 )

[node name="FireDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibiltyTimer" type="Timer" parent="."]
one_shot = true

[node name="Shield" type="Sprite" parent="."]
position = Vector2( 0, -14.2339 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="DamageTakenSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="LaserSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="InvincibiltyTimer" to="." method="_on_InvincibiltyTimer_timeout"]
